--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Document{% endblock %}</title>
 </head>
 <body>
+    <div class="container">
+        <div>
+            {% if  not user.is_authenticated %}
+            <a href="{% url 'login' %}">登入</a>
+            {% else %}
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                hi!!!{{ user }}
+                <input type="submit" value="登出">
+            </form>
+            {% endif %}
+        </div>
     {% block main %}{% endblock%}
+    <div>由張育豪製作</div>
+    </div>
 </body>
 </html>
